# AI3603-Final-Billiards

./: .gitignore  README.md  hello.py  pyproject.toml
docs/: GAME_RULES.md  PROJECT_GUIDE.md
src/: agent.py  config.py  logger.py  utils.py
